Add new identity services java docker job

--- a/jobs/java-docker-jobs.yml
+++ b/jobs/java-docker-jobs.yml
@@ -39,6 +39,15 @@
     jobs:
       - '{name}'
 
+- project:
+    name: identity-services
+    description-intro: Builds, tests, & deploys the Identity Services docker image.
+    email-recipients: mike.albert@cru.org
+    base-image: jboss/wildfly:15.0.1.Final
+    jdk: JDK8
+    jobs:
+      - '{name}'
+
 # maven template for java apps on ECS
 - job-template:
     name: '{name}'
