Have wsapi use the generic build flow
The current java build setup requires Java 7 or 8,
and requires that maven initiate the docker build.
Dmitry and I concluded that using maven to wrap docker isn't useful,
and we also decided to use Java 11 with wsapi.

So I think it's better to have wsapi provide a build.sh
that runs maven and the docker image build,
ignoring Jenkin's built-in support for maven projects.

I'm adding a 'generic-template' job here,
which will do exactly what the php-template job does:
execute build.sh or complain if it doesn't exist.
Probably I'll modify the php jobs to use this template
and remove php-template.

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -381,6 +381,13 @@
     jobs:
       - 'openresty-template'
 
+- project:
+    name: wsapi
+    description-intro: Builds, tests, & deploys the WSAPI docker image.
+    email-recipients: matt.drees@cru.org, bill.randall@cru.org
+    jobs:
+      - 'generic-template'
+
 - job-group:
     name: 'php-template'
     jobs:
@@ -404,6 +411,12 @@
     jobs:
         - '{name}':
             build-script: react_deploy.sh
+
+- job-group:
+    name: 'generic-template'
+    jobs:
+        - '{name}':
+            build-script: generic_deploy.sh
 
 
 
