Add cru-udp-aa-sync job https://github.com/CruGlobal/cru-udp-aa-sync

--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -67,6 +67,14 @@
       - 'pipeline-template':
           branches: master
 
+- project:
+    name: cru-udp-aa-sync
+    description: |
+      CRU User Data Platform / Adobe Analytics placement sync (λ functions).
+    jobs:
+      - 'pipeline-template':
+          branches: master
+
 - job-template:
     id: pipeline-template
 
