--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -75,6 +75,14 @@
       - 'pipeline-template':
           branches: master
 
+- project:
+    name: okta-hooks
+    description: |
+      Okta hooks to enforce Cru business rules  (λ functions).
+    jobs:
+      - 'pipeline-template':
+          branches: staging master
+
 - job-template:
     id: pipeline-template
 
