Add kirby project

--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -89,6 +89,13 @@
       - 'pipeline-template':
           branches: master
 
+- project:
+    name: kirby
+    description: |
+      A Lambda tool for "sucking" db rows from one MPDX database to another
+    jobs:
+      - 'pipeline-template':
+
 - job-template:
     id: pipeline-template
 
