Kirby is just production for now. Maybe stage later

--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -95,6 +95,7 @@
       A Lambda tool for "sucking" db rows from one MPDX database to another
     jobs:
       - 'pipeline-template':
+          branches: master
 
 - job-template:
     id: pipeline-template
