--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -394,6 +394,13 @@
     jobs:
       - 'generic-template'
 
+- project:
+    name: vault
+    description-intro: Builds and deploys the Vault docker image.
+    email-recipients: luis.rodriguez@cru.org, brian.zoetewey@cru.org
+    jobs:
+      - 'generic-template'
+
 - job-group:
     name: 'openresty-template'
     jobs:
