--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -395,6 +395,13 @@
       - 'generic-template'
 
 - project:
+    name: familylife-support-leads
+    description-intro: Builds and deploys the Familylife support-leads docker image.
+    email-recipients: grant.fox@familylife.com
+    jobs:
+      - 'generic-template'
+
+- project:
     name: vault
     description-intro: Builds and deploys the Vault docker image.
     email-recipients: luis.rodriguez@cru.org, brian.zoetewey@cru.org
