--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -137,6 +137,12 @@
       - 'rails-template'
 
 - project:
+    name: campus-crm-api
+    description-intro: Builds, tests, & deploys the CampusCRM API docker image.
+    jobs:
+      - 'rails-template'
+
+- project:
     name: mpd-dashboard-api
     description-intro: Builds, tests, & deploys the mpd-dashboard-api docker image.
     email-recipients: josh.starcher@cru.org, brian.zoetewey@ccci.org, adam.meyer@cru.org
