--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -114,6 +114,14 @@
       - 'pipeline-template':
           branches: master
 
+- project:
+    name: FamilyLife-CventAPI
+    description: |
+      FamilyLife Cvent application (λ functions).
+    jobs:
+      - 'pipeline-template':
+          branches: staging master
+
 - job-template:
     id: pipeline-template
 
