Switch new java apps template.

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -238,7 +238,7 @@
     description-intro: Builds, tests, & deploys the SSW docker image.
     email-recipients: matt.drees@cru.org, bill.randall@cru.org
     jobs:
-      - 'generic-template'
+      - 'ecs-template'
 
 - project:
     name: ccp
@@ -252,21 +252,21 @@
     description-intro: Builds, tests, & deploys the eTimesheet docker image.
     email-recipients: matt.drees@cru.org, bill.randall@cru.org
     jobs:
-      - 'generic-template'
+      - 'ecs-template'
 
 - project:
     name: budget-tool
     description-intro: Builds, tests, & deploys the Budget Tool docker image.
     email-recipients: matt.drees@cru.org, bill.randall@cru.org
     jobs:
-      - 'generic-template'
+      - 'ecs-template'
 
 - project:
     name: email-notification
     description-intro: Builds, tests, & deploys the Email Notifier docker image.
     email-recipients: matt.drees@cru.org, bill.randall@cru.org
     jobs:
-      - 'generic-template'
+      - 'ecs-template'
 
 - project:
     name: atlantis
