--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -134,7 +134,7 @@
 - project:
     name: okta-api-keypalive
     description: |
-      Application to periodically hit Okka with API keys so they don't expire. (λ functions).
+      Application to periodically hit Okta with API keys so they don't expire. (λ functions).
     jobs:
       - 'pipeline-template':
           branches: staging production
