--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -288,6 +288,13 @@
     jobs:
       - 'ecs-template'
 
+- project:
+    name: biscuit-trail
+    description-intro: Builds, tests, & deploys the Biscuit Trail docker image.
+    email-recipients: brian.zoetewey@cru.org
+    jobs:
+      - 'ecs-template'
+
 - job-group:
     name: 'ecs-template'
     jobs:
