Add datadog-agent job

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -293,6 +293,13 @@
     jobs:
       - 'ecs-template'
 
+- project:
+    name: datadog-agent
+    description-intro: Builds, tests, & deploys the Datadog Agent docker image.
+    email-recipients: brian.zoetewey@cru.org, david.hollenberger@cru.org
+    jobs:
+      - 'ecs-template'
+
 - job-group:
     name: 'ecs-template'
     jobs:
