--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -124,6 +124,14 @@
           branches: staging master
 
 - project:
+    name: fl-wtr-list
+    description: |
+      FamilyLife WTR List API application (λ functions).
+    jobs:
+      - 'pipeline-template':
+          branches: staging master
+
+- project:
     name: okta-api-keypalive
     description: |
       Application to periodically hit Okta with API keys so they don't expire. (λ functions).
