--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -333,6 +333,13 @@
     jobs:
       - 'ecs-template'
 
+- project:
+    name: sso
+    description-intro: Builds, tests, & deploys the sso docker image.
+    email-recipients: lee.braddock@cru.org
+    jobs:
+      - 'ecs-template'
+
 - job-group:
     name: 'ecs-template'
     jobs:
